[package]
name = "streamrs"
version = "0.1.0"
authors = ["Alex <al@imalex.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-service = "1.0.5"
futures = "0.3"
bytes = "0.5.3"
env_logger = "0.7.1"